--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1512,6 +1512,6 @@ body * {
   opacity: 0;
 }
 .js-hidden .cal-popup__box {
-  transform: translateY(-40%);
+  transform: translateX(-50%) translateY(-40%);
   opacity: 0;
 }
