--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1529,6 +1529,16 @@ body * {
   border-bottom: 2px solid #50c8f0;
 /*outline: 2px solid alpha($c-main, .25);*/
 }
+.cal-popup__input._area {
+  border: 2px solid #dcdcdc;
+  max-width: 100%;
+  height: 100px;
+}
+.cal-popup__input._area:focus {
+  background-color: rgba(0,0,0,0.05);
+  border-bottom: 2px solid #50c8f0;
+/*outline: 2px solid alpha($c-main, .25);*/
+}
 .js-hidden {
   visibility: hidden;
   opacity: 0;
