--- a/app/frontend/css/style.css
+++ b/app/frontend/css/style.css
@@ -1533,6 +1533,7 @@ body * {
   border: 2px solid #dcdcdc;
   max-width: 100%;
   height: 100px;
+  resize: none;
 }
 .cal-popup__input._area:focus {
   background-color: rgba(0,0,0,0.05);
