--- a/app/frontend/css/style.css
+++ b/app/frontend/css/style.css
@@ -1539,6 +1539,7 @@ body * {
   border: 2px solid #dcdcdc;
   max-width: 100%;
   height: 100px;
+  line-height: 25px;
   resize: none;
 }
 .cal-popup__input._area:focus {
